// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createTheme > should allow for themes to be scoped 1`] = `
<head>
  <style
    id="custom-vuetify-stylesheet-id"
    type="text/css"
  >
    @layer vuetify.theme {
  :root {
    --v-theme-background: 255,255,255;
    --v-theme-background-overlay-multiplier: 1;
    --v-theme-surface: 255,255,255;
    --v-theme-surface-overlay-multiplier: 1;
    --v-theme-surface-bright: 255,255,255;
    --v-theme-surface-bright-overlay-multiplier: 1;
    --v-theme-surface-light: 238,238,238;
    --v-theme-surface-light-overlay-multiplier: 1;
    --v-theme-surface-variant: 66,66,66;
    --v-theme-surface-variant-overlay-multiplier: 2;
    --v-theme-on-surface-variant: 238,238,238;
    --v-theme-primary: 24,103,192;
    --v-theme-primary-overlay-multiplier: 2;
    --v-theme-primary-darken-1: 31,85,146;
    --v-theme-primary-darken-1-overlay-multiplier: 2;
    --v-theme-secondary: 72,169,166;
    --v-theme-secondary-overlay-multiplier: 1;
    --v-theme-secondary-darken-1: 1,135,134;
    --v-theme-secondary-darken-1-overlay-multiplier: 1;
    --v-theme-error: 176,0,32;
    --v-theme-error-overlay-multiplier: 2;
    --v-theme-info: 33,150,243;
    --v-theme-info-overlay-multiplier: 1;
    --v-theme-success: 76,175,80;
    --v-theme-success-overlay-multiplier: 1;
    --v-theme-warning: 251,140,0;
    --v-theme-warning-overlay-multiplier: 1;
    --v-theme-on-background: 0,0,0;
    --v-theme-on-surface: 0,0,0;
    --v-theme-on-surface-bright: 0,0,0;
    --v-theme-on-surface-light: 0,0,0;
    --v-theme-on-primary: 255,255,255;
    --v-theme-on-primary-darken-1: 255,255,255;
    --v-theme-on-secondary: 255,255,255;
    --v-theme-on-secondary-darken-1: 255,255,255;
    --v-theme-on-error: 255,255,255;
    --v-theme-on-info: 255,255,255;
    --v-theme-on-success: 255,255,255;
    --v-theme-on-warning: 255,255,255;
    --v-border-color: 0, 0, 0;
    --v-border-opacity: 0.12;
    --v-high-emphasis-opacity: 0.87;
    --v-medium-emphasis-opacity: 0.6;
    --v-disabled-opacity: 0.38;
    --v-idle-opacity: 0.04;
    --v-hover-opacity: 0.04;
    --v-focus-opacity: 0.12;
    --v-selected-opacity: 0.08;
    --v-activated-opacity: 0.12;
    --v-pressed-opacity: 0.12;
    --v-dragged-opacity: 0.08;
    --v-theme-kbd: 33, 37, 41;
    --v-theme-on-kbd: 255, 255, 255;
    --v-theme-code: 245, 245, 245;
    --v-theme-on-code: 0, 0, 0;
  }
  .v-theme--light {
    color-scheme: normal;
    --v-theme-background: 255,255,255;
    --v-theme-background-overlay-multiplier: 1;
    --v-theme-surface: 255,255,255;
    --v-theme-surface-overlay-multiplier: 1;
    --v-theme-surface-bright: 255,255,255;
    --v-theme-surface-bright-overlay-multiplier: 1;
    --v-theme-surface-light: 238,238,238;
    --v-theme-surface-light-overlay-multiplier: 1;
    --v-theme-surface-variant: 66,66,66;
    --v-theme-surface-variant-overlay-multiplier: 2;
    --v-theme-on-surface-variant: 238,238,238;
    --v-theme-primary: 24,103,192;
    --v-theme-primary-overlay-multiplier: 2;
    --v-theme-primary-darken-1: 31,85,146;
    --v-theme-primary-darken-1-overlay-multiplier: 2;
    --v-theme-secondary: 72,169,166;
    --v-theme-secondary-overlay-multiplier: 1;
    --v-theme-secondary-darken-1: 1,135,134;
    --v-theme-secondary-darken-1-overlay-multiplier: 1;
    --v-theme-error: 176,0,32;
    --v-theme-error-overlay-multiplier: 2;
    --v-theme-info: 33,150,243;
    --v-theme-info-overlay-multiplier: 1;
    --v-theme-success: 76,175,80;
    --v-theme-success-overlay-multiplier: 1;
    --v-theme-warning: 251,140,0;
    --v-theme-warning-overlay-multiplier: 1;
    --v-theme-on-background: 0,0,0;
    --v-theme-on-surface: 0,0,0;
    --v-theme-on-surface-bright: 0,0,0;
    --v-theme-on-surface-light: 0,0,0;
    --v-theme-on-primary: 255,255,255;
    --v-theme-on-primary-darken-1: 255,255,255;
    --v-theme-on-secondary: 255,255,255;
    --v-theme-on-secondary-darken-1: 255,255,255;
    --v-theme-on-error: 255,255,255;
    --v-theme-on-info: 255,255,255;
    --v-theme-on-success: 255,255,255;
    --v-theme-on-warning: 255,255,255;
    --v-border-color: 0, 0, 0;
    --v-border-opacity: 0.12;
    --v-high-emphasis-opacity: 0.87;
    --v-medium-emphasis-opacity: 0.6;
    --v-disabled-opacity: 0.38;
    --v-idle-opacity: 0.04;
    --v-hover-opacity: 0.04;
    --v-focus-opacity: 0.12;
    --v-selected-opacity: 0.08;
    --v-activated-opacity: 0.12;
    --v-pressed-opacity: 0.12;
    --v-dragged-opacity: 0.08;
    --v-theme-kbd: 33, 37, 41;
    --v-theme-on-kbd: 255, 255, 255;
    --v-theme-code: 245, 245, 245;
    --v-theme-on-code: 0, 0, 0;
  }
  .v-theme--dark {
    color-scheme: dark;
    --v-theme-background: 18,18,18;
    --v-theme-background-overlay-multiplier: 1;
    --v-theme-surface: 33,33,33;
    --v-theme-surface-overlay-multiplier: 1;
    --v-theme-surface-bright: 204,191,214;
    --v-theme-surface-bright-overlay-multiplier: 2;
    --v-theme-surface-light: 66,66,66;
    --v-theme-surface-light-overlay-multiplier: 1;
    --v-theme-surface-variant: 163,163,163;
    --v-theme-surface-variant-overlay-multiplier: 2;
    --v-theme-on-surface-variant: 66,66,66;
    --v-theme-primary: 33,150,243;
    --v-theme-primary-overlay-multiplier: 2;
    --v-theme-primary-darken-1: 39,124,193;
    --v-theme-primary-darken-1-overlay-multiplier: 2;
    --v-theme-secondary: 84,182,178;
    --v-theme-secondary-overlay-multiplier: 2;
    --v-theme-secondary-darken-1: 72,169,166;
    --v-theme-secondary-darken-1-overlay-multiplier: 2;
    --v-theme-error: 207,102,121;
    --v-theme-error-overlay-multiplier: 2;
    --v-theme-info: 33,150,243;
    --v-theme-info-overlay-multiplier: 2;
    --v-theme-success: 76,175,80;
    --v-theme-success-overlay-multiplier: 2;
    --v-theme-warning: 251,140,0;
    --v-theme-warning-overlay-multiplier: 2;
    --v-theme-on-background: 255,255,255;
    --v-theme-on-surface: 255,255,255;
    --v-theme-on-surface-bright: 0,0,0;
    --v-theme-on-surface-light: 255,255,255;
    --v-theme-on-primary: 255,255,255;
    --v-theme-on-primary-darken-1: 255,255,255;
    --v-theme-on-secondary: 255,255,255;
    --v-theme-on-secondary-darken-1: 255,255,255;
    --v-theme-on-error: 255,255,255;
    --v-theme-on-info: 255,255,255;
    --v-theme-on-success: 255,255,255;
    --v-theme-on-warning: 255,255,255;
    --v-border-color: 255, 255, 255;
    --v-border-opacity: 0.12;
    --v-high-emphasis-opacity: 1;
    --v-medium-emphasis-opacity: 0.7;
    --v-disabled-opacity: 0.5;
    --v-idle-opacity: 0.1;
    --v-hover-opacity: 0.04;
    --v-focus-opacity: 0.12;
    --v-selected-opacity: 0.08;
    --v-activated-opacity: 0.12;
    --v-pressed-opacity: 0.16;
    --v-dragged-opacity: 0.08;
    --v-theme-kbd: 33, 37, 41;
    --v-theme-on-kbd: 255, 255, 255;
    --v-theme-code: 52, 52, 52;
    --v-theme-on-code: 204, 204, 204;
  }
  .bg-background {
    --v-theme-overlay-multiplier: var(--v-theme-background-overlay-multiplier);
    background-color: rgb(var(--v-theme-background));
    color: rgb(var(--v-theme-on-background));
  }
  .bg-surface {
    --v-theme-overlay-multiplier: var(--v-theme-surface-overlay-multiplier);
    background-color: rgb(var(--v-theme-surface));
    color: rgb(var(--v-theme-on-surface));
  }
  .bg-surface-bright {
    --v-theme-overlay-multiplier: var(--v-theme-surface-bright-overlay-multiplier);
    background-color: rgb(var(--v-theme-surface-bright));
    color: rgb(var(--v-theme-on-surface-bright));
  }
  .bg-surface-light {
    --v-theme-overlay-multiplier: var(--v-theme-surface-light-overlay-multiplier);
    background-color: rgb(var(--v-theme-surface-light));
    color: rgb(var(--v-theme-on-surface-light));
  }
  .bg-surface-variant {
    --v-theme-overlay-multiplier: var(--v-theme-surface-variant-overlay-multiplier);
    background-color: rgb(var(--v-theme-surface-variant));
    color: rgb(var(--v-theme-on-surface-variant));
  }
  .bg-primary {
    --v-theme-overlay-multiplier: var(--v-theme-primary-overlay-multiplier);
    background-color: rgb(var(--v-theme-primary));
    color: rgb(var(--v-theme-on-primary));
  }
  .bg-primary-darken-1 {
    --v-theme-overlay-multiplier: var(--v-theme-primary-darken-1-overlay-multiplier);
    background-color: rgb(var(--v-theme-primary-darken-1));
    color: rgb(var(--v-theme-on-primary-darken-1));
  }
  .bg-secondary {
    --v-theme-overlay-multiplier: var(--v-theme-secondary-overlay-multiplier);
    background-color: rgb(var(--v-theme-secondary));
    color: rgb(var(--v-theme-on-secondary));
  }
  .bg-secondary-darken-1 {
    --v-theme-overlay-multiplier: var(--v-theme-secondary-darken-1-overlay-multiplier);
    background-color: rgb(var(--v-theme-secondary-darken-1));
    color: rgb(var(--v-theme-on-secondary-darken-1));
  }
  .bg-error {
    --v-theme-overlay-multiplier: var(--v-theme-error-overlay-multiplier);
    background-color: rgb(var(--v-theme-error));
    color: rgb(var(--v-theme-on-error));
  }
  .bg-info {
    --v-theme-overlay-multiplier: var(--v-theme-info-overlay-multiplier);
    background-color: rgb(var(--v-theme-info));
    color: rgb(var(--v-theme-on-info));
  }
  .bg-success {
    --v-theme-overlay-multiplier: var(--v-theme-success-overlay-multiplier);
    background-color: rgb(var(--v-theme-success));
    color: rgb(var(--v-theme-on-success));
  }
  .bg-warning {
    --v-theme-overlay-multiplier: var(--v-theme-warning-overlay-multiplier);
    background-color: rgb(var(--v-theme-warning));
    color: rgb(var(--v-theme-on-warning));
  }
  .text-background {
    color: rgb(var(--v-theme-background));
  }
  .border-background {
    --v-border-color: var(--v-theme-background);
  }
  .text-surface {
    color: rgb(var(--v-theme-surface));
  }
  .border-surface {
    --v-border-color: var(--v-theme-surface);
  }
  .text-surface-bright {
    color: rgb(var(--v-theme-surface-bright));
  }
  .border-surface-bright {
    --v-border-color: var(--v-theme-surface-bright);
  }
  .text-surface-light {
    color: rgb(var(--v-theme-surface-light));
  }
  .border-surface-light {
    --v-border-color: var(--v-theme-surface-light);
  }
  .text-surface-variant {
    color: rgb(var(--v-theme-surface-variant));
  }
  .border-surface-variant {
    --v-border-color: var(--v-theme-surface-variant);
  }
  .on-surface-variant {
    color: rgb(var(--v-theme-on-surface-variant));
  }
  .text-primary {
    color: rgb(var(--v-theme-primary));
  }
  .border-primary {
    --v-border-color: var(--v-theme-primary);
  }
  .text-primary-darken-1 {
    color: rgb(var(--v-theme-primary-darken-1));
  }
  .border-primary-darken-1 {
    --v-border-color: var(--v-theme-primary-darken-1);
  }
  .text-secondary {
    color: rgb(var(--v-theme-secondary));
  }
  .border-secondary {
    --v-border-color: var(--v-theme-secondary);
  }
  .text-secondary-darken-1 {
    color: rgb(var(--v-theme-secondary-darken-1));
  }
  .border-secondary-darken-1 {
    --v-border-color: var(--v-theme-secondary-darken-1);
  }
  .text-error {
    color: rgb(var(--v-theme-error));
  }
  .border-error {
    --v-border-color: var(--v-theme-error);
  }
  .text-info {
    color: rgb(var(--v-theme-info));
  }
  .border-info {
    --v-border-color: var(--v-theme-info);
  }
  .text-success {
    color: rgb(var(--v-theme-success));
  }
  .border-success {
    --v-border-color: var(--v-theme-success);
  }
  .text-warning {
    color: rgb(var(--v-theme-warning));
  }
  .border-warning {
    --v-border-color: var(--v-theme-warning);
  }
  .on-background {
    color: rgb(var(--v-theme-on-background));
  }
  .on-surface {
    color: rgb(var(--v-theme-on-surface));
  }
  .on-surface-bright {
    color: rgb(var(--v-theme-on-surface-bright));
  }
  .on-surface-light {
    color: rgb(var(--v-theme-on-surface-light));
  }
  .on-primary {
    color: rgb(var(--v-theme-on-primary));
  }
  .on-primary-darken-1 {
    color: rgb(var(--v-theme-on-primary-darken-1));
  }
  .on-secondary {
    color: rgb(var(--v-theme-on-secondary));
  }
  .on-secondary-darken-1 {
    color: rgb(var(--v-theme-on-secondary-darken-1));
  }
  .on-error {
    color: rgb(var(--v-theme-on-error));
  }
  .on-info {
    color: rgb(var(--v-theme-on-info));
  }
  .on-success {
    color: rgb(var(--v-theme-on-success));
  }
  .on-warning {
    color: rgb(var(--v-theme-on-warning));
  }

}
  </style>
  <style
    id="vuetify-theme-stylesheet"
    type="text/css"
  >
    @layer vuetify.theme {
  :where(#my-app) {
    --v-theme-background: 255,255,255;
    --v-theme-background-overlay-multiplier: 1;
    --v-theme-surface: 255,255,255;
    --v-theme-surface-overlay-multiplier: 1;
    --v-theme-surface-bright: 255,255,255;
    --v-theme-surface-bright-overlay-multiplier: 1;
    --v-theme-surface-light: 238,238,238;
    --v-theme-surface-light-overlay-multiplier: 1;
    --v-theme-surface-variant: 66,66,66;
    --v-theme-surface-variant-overlay-multiplier: 2;
    --v-theme-on-surface-variant: 238,238,238;
    --v-theme-primary: 24,103,192;
    --v-theme-primary-overlay-multiplier: 2;
    --v-theme-primary-darken-1: 31,85,146;
    --v-theme-primary-darken-1-overlay-multiplier: 2;
    --v-theme-secondary: 72,169,166;
    --v-theme-secondary-overlay-multiplier: 1;
    --v-theme-secondary-darken-1: 1,135,134;
    --v-theme-secondary-darken-1-overlay-multiplier: 1;
    --v-theme-error: 176,0,32;
    --v-theme-error-overlay-multiplier: 2;
    --v-theme-info: 33,150,243;
    --v-theme-info-overlay-multiplier: 1;
    --v-theme-success: 76,175,80;
    --v-theme-success-overlay-multiplier: 1;
    --v-theme-warning: 251,140,0;
    --v-theme-warning-overlay-multiplier: 1;
    --v-theme-on-background: 0,0,0;
    --v-theme-on-surface: 0,0,0;
    --v-theme-on-surface-bright: 0,0,0;
    --v-theme-on-surface-light: 0,0,0;
    --v-theme-on-primary: 255,255,255;
    --v-theme-on-primary-darken-1: 255,255,255;
    --v-theme-on-secondary: 255,255,255;
    --v-theme-on-secondary-darken-1: 255,255,255;
    --v-theme-on-error: 255,255,255;
    --v-theme-on-info: 255,255,255;
    --v-theme-on-success: 255,255,255;
    --v-theme-on-warning: 255,255,255;
    --v-border-color: 0, 0, 0;
    --v-border-opacity: 0.12;
    --v-high-emphasis-opacity: 0.87;
    --v-medium-emphasis-opacity: 0.6;
    --v-disabled-opacity: 0.38;
    --v-idle-opacity: 0.04;
    --v-hover-opacity: 0.04;
    --v-focus-opacity: 0.12;
    --v-selected-opacity: 0.08;
    --v-activated-opacity: 0.12;
    --v-pressed-opacity: 0.12;
    --v-dragged-opacity: 0.08;
    --v-theme-kbd: 33, 37, 41;
    --v-theme-on-kbd: 255, 255, 255;
    --v-theme-code: 245, 245, 245;
    --v-theme-on-code: 0, 0, 0;
  }
  :where(#my-app) .v-theme--light {
    color-scheme: normal;
    --v-theme-background: 255,255,255;
    --v-theme-background-overlay-multiplier: 1;
    --v-theme-surface: 255,255,255;
    --v-theme-surface-overlay-multiplier: 1;
    --v-theme-surface-bright: 255,255,255;
    --v-theme-surface-bright-overlay-multiplier: 1;
    --v-theme-surface-light: 238,238,238;
    --v-theme-surface-light-overlay-multiplier: 1;
    --v-theme-surface-variant: 66,66,66;
    --v-theme-surface-variant-overlay-multiplier: 2;
    --v-theme-on-surface-variant: 238,238,238;
    --v-theme-primary: 24,103,192;
    --v-theme-primary-overlay-multiplier: 2;
    --v-theme-primary-darken-1: 31,85,146;
    --v-theme-primary-darken-1-overlay-multiplier: 2;
    --v-theme-secondary: 72,169,166;
    --v-theme-secondary-overlay-multiplier: 1;
    --v-theme-secondary-darken-1: 1,135,134;
    --v-theme-secondary-darken-1-overlay-multiplier: 1;
    --v-theme-error: 176,0,32;
    --v-theme-error-overlay-multiplier: 2;
    --v-theme-info: 33,150,243;
    --v-theme-info-overlay-multiplier: 1;
    --v-theme-success: 76,175,80;
    --v-theme-success-overlay-multiplier: 1;
    --v-theme-warning: 251,140,0;
    --v-theme-warning-overlay-multiplier: 1;
    --v-theme-on-background: 0,0,0;
    --v-theme-on-surface: 0,0,0;
    --v-theme-on-surface-bright: 0,0,0;
    --v-theme-on-surface-light: 0,0,0;
    --v-theme-on-primary: 255,255,255;
    --v-theme-on-primary-darken-1: 255,255,255;
    --v-theme-on-secondary: 255,255,255;
    --v-theme-on-secondary-darken-1: 255,255,255;
    --v-theme-on-error: 255,255,255;
    --v-theme-on-info: 255,255,255;
    --v-theme-on-success: 255,255,255;
    --v-theme-on-warning: 255,255,255;
    --v-border-color: 0, 0, 0;
    --v-border-opacity: 0.12;
    --v-high-emphasis-opacity: 0.87;
    --v-medium-emphasis-opacity: 0.6;
    --v-disabled-opacity: 0.38;
    --v-idle-opacity: 0.04;
    --v-hover-opacity: 0.04;
    --v-focus-opacity: 0.12;
    --v-selected-opacity: 0.08;
    --v-activated-opacity: 0.12;
    --v-pressed-opacity: 0.12;
    --v-dragged-opacity: 0.08;
    --v-theme-kbd: 33, 37, 41;
    --v-theme-on-kbd: 255, 255, 255;
    --v-theme-code: 245, 245, 245;
    --v-theme-on-code: 0, 0, 0;
  }
  :where(#my-app) .v-theme--dark {
    color-scheme: dark;
    --v-theme-background: 18,18,18;
    --v-theme-background-overlay-multiplier: 1;
    --v-theme-surface: 33,33,33;
    --v-theme-surface-overlay-multiplier: 1;
    --v-theme-surface-bright: 204,191,214;
    --v-theme-surface-bright-overlay-multiplier: 2;
    --v-theme-surface-light: 66,66,66;
    --v-theme-surface-light-overlay-multiplier: 1;
    --v-theme-surface-variant: 163,163,163;
    --v-theme-surface-variant-overlay-multiplier: 2;
    --v-theme-on-surface-variant: 66,66,66;
    --v-theme-primary: 33,150,243;
    --v-theme-primary-overlay-multiplier: 2;
    --v-theme-primary-darken-1: 39,124,193;
    --v-theme-primary-darken-1-overlay-multiplier: 2;
    --v-theme-secondary: 84,182,178;
    --v-theme-secondary-overlay-multiplier: 2;
    --v-theme-secondary-darken-1: 72,169,166;
    --v-theme-secondary-darken-1-overlay-multiplier: 2;
    --v-theme-error: 207,102,121;
    --v-theme-error-overlay-multiplier: 2;
    --v-theme-info: 33,150,243;
    --v-theme-info-overlay-multiplier: 2;
    --v-theme-success: 76,175,80;
    --v-theme-success-overlay-multiplier: 2;
    --v-theme-warning: 251,140,0;
    --v-theme-warning-overlay-multiplier: 2;
    --v-theme-on-background: 255,255,255;
    --v-theme-on-surface: 255,255,255;
    --v-theme-on-surface-bright: 0,0,0;
    --v-theme-on-surface-light: 255,255,255;
    --v-theme-on-primary: 255,255,255;
    --v-theme-on-primary-darken-1: 255,255,255;
    --v-theme-on-secondary: 255,255,255;
    --v-theme-on-secondary-darken-1: 255,255,255;
    --v-theme-on-error: 255,255,255;
    --v-theme-on-info: 255,255,255;
    --v-theme-on-success: 255,255,255;
    --v-theme-on-warning: 255,255,255;
    --v-border-color: 255, 255, 255;
    --v-border-opacity: 0.12;
    --v-high-emphasis-opacity: 1;
    --v-medium-emphasis-opacity: 0.7;
    --v-disabled-opacity: 0.5;
    --v-idle-opacity: 0.1;
    --v-hover-opacity: 0.04;
    --v-focus-opacity: 0.12;
    --v-selected-opacity: 0.08;
    --v-activated-opacity: 0.12;
    --v-pressed-opacity: 0.16;
    --v-dragged-opacity: 0.08;
    --v-theme-kbd: 33, 37, 41;
    --v-theme-on-kbd: 255, 255, 255;
    --v-theme-code: 52, 52, 52;
    --v-theme-on-code: 204, 204, 204;
  }
  :where(#my-app) .bg-background {
    --v-theme-overlay-multiplier: var(--v-theme-background-overlay-multiplier);
    background-color: rgb(var(--v-theme-background));
    color: rgb(var(--v-theme-on-background));
  }
  :where(#my-app) .bg-surface {
    --v-theme-overlay-multiplier: var(--v-theme-surface-overlay-multiplier);
    background-color: rgb(var(--v-theme-surface));
    color: rgb(var(--v-theme-on-surface));
  }
  :where(#my-app) .bg-surface-bright {
    --v-theme-overlay-multiplier: var(--v-theme-surface-bright-overlay-multiplier);
    background-color: rgb(var(--v-theme-surface-bright));
    color: rgb(var(--v-theme-on-surface-bright));
  }
  :where(#my-app) .bg-surface-light {
    --v-theme-overlay-multiplier: var(--v-theme-surface-light-overlay-multiplier);
    background-color: rgb(var(--v-theme-surface-light));
    color: rgb(var(--v-theme-on-surface-light));
  }
  :where(#my-app) .bg-surface-variant {
    --v-theme-overlay-multiplier: var(--v-theme-surface-variant-overlay-multiplier);
    background-color: rgb(var(--v-theme-surface-variant));
    color: rgb(var(--v-theme-on-surface-variant));
  }
  :where(#my-app) .bg-primary {
    --v-theme-overlay-multiplier: var(--v-theme-primary-overlay-multiplier);
    background-color: rgb(var(--v-theme-primary));
    color: rgb(var(--v-theme-on-primary));
  }
  :where(#my-app) .bg-primary-darken-1 {
    --v-theme-overlay-multiplier: var(--v-theme-primary-darken-1-overlay-multiplier);
    background-color: rgb(var(--v-theme-primary-darken-1));
    color: rgb(var(--v-theme-on-primary-darken-1));
  }
  :where(#my-app) .bg-secondary {
    --v-theme-overlay-multiplier: var(--v-theme-secondary-overlay-multiplier);
    background-color: rgb(var(--v-theme-secondary));
    color: rgb(var(--v-theme-on-secondary));
  }
  :where(#my-app) .bg-secondary-darken-1 {
    --v-theme-overlay-multiplier: var(--v-theme-secondary-darken-1-overlay-multiplier);
    background-color: rgb(var(--v-theme-secondary-darken-1));
    color: rgb(var(--v-theme-on-secondary-darken-1));
  }
  :where(#my-app) .bg-error {
    --v-theme-overlay-multiplier: var(--v-theme-error-overlay-multiplier);
    background-color: rgb(var(--v-theme-error));
    color: rgb(var(--v-theme-on-error));
  }
  :where(#my-app) .bg-info {
    --v-theme-overlay-multiplier: var(--v-theme-info-overlay-multiplier);
    background-color: rgb(var(--v-theme-info));
    color: rgb(var(--v-theme-on-info));
  }
  :where(#my-app) .bg-success {
    --v-theme-overlay-multiplier: var(--v-theme-success-overlay-multiplier);
    background-color: rgb(var(--v-theme-success));
    color: rgb(var(--v-theme-on-success));
  }
  :where(#my-app) .bg-warning {
    --v-theme-overlay-multiplier: var(--v-theme-warning-overlay-multiplier);
    background-color: rgb(var(--v-theme-warning));
    color: rgb(var(--v-theme-on-warning));
  }
  :where(#my-app) .text-background {
    color: rgb(var(--v-theme-background));
  }
  :where(#my-app) .border-background {
    --v-border-color: var(--v-theme-background);
  }
  :where(#my-app) .text-surface {
    color: rgb(var(--v-theme-surface));
  }
  :where(#my-app) .border-surface {
    --v-border-color: var(--v-theme-surface);
  }
  :where(#my-app) .text-surface-bright {
    color: rgb(var(--v-theme-surface-bright));
  }
  :where(#my-app) .border-surface-bright {
    --v-border-color: var(--v-theme-surface-bright);
  }
  :where(#my-app) .text-surface-light {
    color: rgb(var(--v-theme-surface-light));
  }
  :where(#my-app) .border-surface-light {
    --v-border-color: var(--v-theme-surface-light);
  }
  :where(#my-app) .text-surface-variant {
    color: rgb(var(--v-theme-surface-variant));
  }
  :where(#my-app) .border-surface-variant {
    --v-border-color: var(--v-theme-surface-variant);
  }
  :where(#my-app) .on-surface-variant {
    color: rgb(var(--v-theme-on-surface-variant));
  }
  :where(#my-app) .text-primary {
    color: rgb(var(--v-theme-primary));
  }
  :where(#my-app) .border-primary {
    --v-border-color: var(--v-theme-primary);
  }
  :where(#my-app) .text-primary-darken-1 {
    color: rgb(var(--v-theme-primary-darken-1));
  }
  :where(#my-app) .border-primary-darken-1 {
    --v-border-color: var(--v-theme-primary-darken-1);
  }
  :where(#my-app) .text-secondary {
    color: rgb(var(--v-theme-secondary));
  }
  :where(#my-app) .border-secondary {
    --v-border-color: var(--v-theme-secondary);
  }
  :where(#my-app) .text-secondary-darken-1 {
    color: rgb(var(--v-theme-secondary-darken-1));
  }
  :where(#my-app) .border-secondary-darken-1 {
    --v-border-color: var(--v-theme-secondary-darken-1);
  }
  :where(#my-app) .text-error {
    color: rgb(var(--v-theme-error));
  }
  :where(#my-app) .border-error {
    --v-border-color: var(--v-theme-error);
  }
  :where(#my-app) .text-info {
    color: rgb(var(--v-theme-info));
  }
  :where(#my-app) .border-info {
    --v-border-color: var(--v-theme-info);
  }
  :where(#my-app) .text-success {
    color: rgb(var(--v-theme-success));
  }
  :where(#my-app) .border-success {
    --v-border-color: var(--v-theme-success);
  }
  :where(#my-app) .text-warning {
    color: rgb(var(--v-theme-warning));
  }
  :where(#my-app) .border-warning {
    --v-border-color: var(--v-theme-warning);
  }
  :where(#my-app) .on-background {
    color: rgb(var(--v-theme-on-background));
  }
  :where(#my-app) .on-surface {
    color: rgb(var(--v-theme-on-surface));
  }
  :where(#my-app) .on-surface-bright {
    color: rgb(var(--v-theme-on-surface-bright));
  }
  :where(#my-app) .on-surface-light {
    color: rgb(var(--v-theme-on-surface-light));
  }
  :where(#my-app) .on-primary {
    color: rgb(var(--v-theme-on-primary));
  }
  :where(#my-app) .on-primary-darken-1 {
    color: rgb(var(--v-theme-on-primary-darken-1));
  }
  :where(#my-app) .on-secondary {
    color: rgb(var(--v-theme-on-secondary));
  }
  :where(#my-app) .on-secondary-darken-1 {
    color: rgb(var(--v-theme-on-secondary-darken-1));
  }
  :where(#my-app) .on-error {
    color: rgb(var(--v-theme-on-error));
  }
  :where(#my-app) .on-info {
    color: rgb(var(--v-theme-on-info));
  }
  :where(#my-app) .on-success {
    color: rgb(var(--v-theme-on-success));
  }
  :where(#my-app) .on-warning {
    color: rgb(var(--v-theme-on-warning));
  }

}
  </style>
</head>
`;

exports[`createTheme > should create style element 1`] = `
<head>
  <style
    id="vuetify-theme-stylesheet"
    type="text/css"
  >
    @layer vuetify.theme {
  :root {
    --v-theme-background: 255,255,255;
    --v-theme-background-overlay-multiplier: 1;
    --v-theme-surface: 255,255,255;
    --v-theme-surface-overlay-multiplier: 1;
    --v-theme-surface-bright: 255,255,255;
    --v-theme-surface-bright-overlay-multiplier: 1;
    --v-theme-surface-light: 238,238,238;
    --v-theme-surface-light-overlay-multiplier: 1;
    --v-theme-surface-variant: 66,66,66;
    --v-theme-surface-variant-overlay-multiplier: 2;
    --v-theme-on-surface-variant: 238,238,238;
    --v-theme-primary: 24,103,192;
    --v-theme-primary-overlay-multiplier: 2;
    --v-theme-primary-darken-1: 31,85,146;
    --v-theme-primary-darken-1-overlay-multiplier: 2;
    --v-theme-secondary: 72,169,166;
    --v-theme-secondary-overlay-multiplier: 1;
    --v-theme-secondary-darken-1: 1,135,134;
    --v-theme-secondary-darken-1-overlay-multiplier: 1;
    --v-theme-error: 176,0,32;
    --v-theme-error-overlay-multiplier: 2;
    --v-theme-info: 33,150,243;
    --v-theme-info-overlay-multiplier: 1;
    --v-theme-success: 76,175,80;
    --v-theme-success-overlay-multiplier: 1;
    --v-theme-warning: 251,140,0;
    --v-theme-warning-overlay-multiplier: 1;
    --v-theme-on-background: 0,0,0;
    --v-theme-on-surface: 0,0,0;
    --v-theme-on-surface-bright: 0,0,0;
    --v-theme-on-surface-light: 0,0,0;
    --v-theme-on-primary: 255,255,255;
    --v-theme-on-primary-darken-1: 255,255,255;
    --v-theme-on-secondary: 255,255,255;
    --v-theme-on-secondary-darken-1: 255,255,255;
    --v-theme-on-error: 255,255,255;
    --v-theme-on-info: 255,255,255;
    --v-theme-on-success: 255,255,255;
    --v-theme-on-warning: 255,255,255;
    --v-border-color: 0, 0, 0;
    --v-border-opacity: 0.12;
    --v-high-emphasis-opacity: 0.87;
    --v-medium-emphasis-opacity: 0.6;
    --v-disabled-opacity: 0.38;
    --v-idle-opacity: 0.04;
    --v-hover-opacity: 0.04;
    --v-focus-opacity: 0.12;
    --v-selected-opacity: 0.08;
    --v-activated-opacity: 0.12;
    --v-pressed-opacity: 0.12;
    --v-dragged-opacity: 0.08;
    --v-theme-kbd: 33, 37, 41;
    --v-theme-on-kbd: 255, 255, 255;
    --v-theme-code: 245, 245, 245;
    --v-theme-on-code: 0, 0, 0;
  }
  .v-theme--light {
    color-scheme: normal;
    --v-theme-background: 255,255,255;
    --v-theme-background-overlay-multiplier: 1;
    --v-theme-surface: 255,255,255;
    --v-theme-surface-overlay-multiplier: 1;
    --v-theme-surface-bright: 255,255,255;
    --v-theme-surface-bright-overlay-multiplier: 1;
    --v-theme-surface-light: 238,238,238;
    --v-theme-surface-light-overlay-multiplier: 1;
    --v-theme-surface-variant: 66,66,66;
    --v-theme-surface-variant-overlay-multiplier: 2;
    --v-theme-on-surface-variant: 238,238,238;
    --v-theme-primary: 24,103,192;
    --v-theme-primary-overlay-multiplier: 2;
    --v-theme-primary-darken-1: 31,85,146;
    --v-theme-primary-darken-1-overlay-multiplier: 2;
    --v-theme-secondary: 72,169,166;
    --v-theme-secondary-overlay-multiplier: 1;
    --v-theme-secondary-darken-1: 1,135,134;
    --v-theme-secondary-darken-1-overlay-multiplier: 1;
    --v-theme-error: 176,0,32;
    --v-theme-error-overlay-multiplier: 2;
    --v-theme-info: 33,150,243;
    --v-theme-info-overlay-multiplier: 1;
    --v-theme-success: 76,175,80;
    --v-theme-success-overlay-multiplier: 1;
    --v-theme-warning: 251,140,0;
    --v-theme-warning-overlay-multiplier: 1;
    --v-theme-on-background: 0,0,0;
    --v-theme-on-surface: 0,0,0;
    --v-theme-on-surface-bright: 0,0,0;
    --v-theme-on-surface-light: 0,0,0;
    --v-theme-on-primary: 255,255,255;
    --v-theme-on-primary-darken-1: 255,255,255;
    --v-theme-on-secondary: 255,255,255;
    --v-theme-on-secondary-darken-1: 255,255,255;
    --v-theme-on-error: 255,255,255;
    --v-theme-on-info: 255,255,255;
    --v-theme-on-success: 255,255,255;
    --v-theme-on-warning: 255,255,255;
    --v-border-color: 0, 0, 0;
    --v-border-opacity: 0.12;
    --v-high-emphasis-opacity: 0.87;
    --v-medium-emphasis-opacity: 0.6;
    --v-disabled-opacity: 0.38;
    --v-idle-opacity: 0.04;
    --v-hover-opacity: 0.04;
    --v-focus-opacity: 0.12;
    --v-selected-opacity: 0.08;
    --v-activated-opacity: 0.12;
    --v-pressed-opacity: 0.12;
    --v-dragged-opacity: 0.08;
    --v-theme-kbd: 33, 37, 41;
    --v-theme-on-kbd: 255, 255, 255;
    --v-theme-code: 245, 245, 245;
    --v-theme-on-code: 0, 0, 0;
  }
  .v-theme--dark {
    color-scheme: dark;
    --v-theme-background: 18,18,18;
    --v-theme-background-overlay-multiplier: 1;
    --v-theme-surface: 33,33,33;
    --v-theme-surface-overlay-multiplier: 1;
    --v-theme-surface-bright: 204,191,214;
    --v-theme-surface-bright-overlay-multiplier: 2;
    --v-theme-surface-light: 66,66,66;
    --v-theme-surface-light-overlay-multiplier: 1;
    --v-theme-surface-variant: 163,163,163;
    --v-theme-surface-variant-overlay-multiplier: 2;
    --v-theme-on-surface-variant: 66,66,66;
    --v-theme-primary: 33,150,243;
    --v-theme-primary-overlay-multiplier: 2;
    --v-theme-primary-darken-1: 39,124,193;
    --v-theme-primary-darken-1-overlay-multiplier: 2;
    --v-theme-secondary: 84,182,178;
    --v-theme-secondary-overlay-multiplier: 2;
    --v-theme-secondary-darken-1: 72,169,166;
    --v-theme-secondary-darken-1-overlay-multiplier: 2;
    --v-theme-error: 207,102,121;
    --v-theme-error-overlay-multiplier: 2;
    --v-theme-info: 33,150,243;
    --v-theme-info-overlay-multiplier: 2;
    --v-theme-success: 76,175,80;
    --v-theme-success-overlay-multiplier: 2;
    --v-theme-warning: 251,140,0;
    --v-theme-warning-overlay-multiplier: 2;
    --v-theme-on-background: 255,255,255;
    --v-theme-on-surface: 255,255,255;
    --v-theme-on-surface-bright: 0,0,0;
    --v-theme-on-surface-light: 255,255,255;
    --v-theme-on-primary: 255,255,255;
    --v-theme-on-primary-darken-1: 255,255,255;
    --v-theme-on-secondary: 255,255,255;
    --v-theme-on-secondary-darken-1: 255,255,255;
    --v-theme-on-error: 255,255,255;
    --v-theme-on-info: 255,255,255;
    --v-theme-on-success: 255,255,255;
    --v-theme-on-warning: 255,255,255;
    --v-border-color: 255, 255, 255;
    --v-border-opacity: 0.12;
    --v-high-emphasis-opacity: 1;
    --v-medium-emphasis-opacity: 0.7;
    --v-disabled-opacity: 0.5;
    --v-idle-opacity: 0.1;
    --v-hover-opacity: 0.04;
    --v-focus-opacity: 0.12;
    --v-selected-opacity: 0.08;
    --v-activated-opacity: 0.12;
    --v-pressed-opacity: 0.16;
    --v-dragged-opacity: 0.08;
    --v-theme-kbd: 33, 37, 41;
    --v-theme-on-kbd: 255, 255, 255;
    --v-theme-code: 52, 52, 52;
    --v-theme-on-code: 204, 204, 204;
  }
  .bg-background {
    --v-theme-overlay-multiplier: var(--v-theme-background-overlay-multiplier);
    background-color: rgb(var(--v-theme-background));
    color: rgb(var(--v-theme-on-background));
  }
  .bg-surface {
    --v-theme-overlay-multiplier: var(--v-theme-surface-overlay-multiplier);
    background-color: rgb(var(--v-theme-surface));
    color: rgb(var(--v-theme-on-surface));
  }
  .bg-surface-bright {
    --v-theme-overlay-multiplier: var(--v-theme-surface-bright-overlay-multiplier);
    background-color: rgb(var(--v-theme-surface-bright));
    color: rgb(var(--v-theme-on-surface-bright));
  }
  .bg-surface-light {
    --v-theme-overlay-multiplier: var(--v-theme-surface-light-overlay-multiplier);
    background-color: rgb(var(--v-theme-surface-light));
    color: rgb(var(--v-theme-on-surface-light));
  }
  .bg-surface-variant {
    --v-theme-overlay-multiplier: var(--v-theme-surface-variant-overlay-multiplier);
    background-color: rgb(var(--v-theme-surface-variant));
    color: rgb(var(--v-theme-on-surface-variant));
  }
  .bg-primary {
    --v-theme-overlay-multiplier: var(--v-theme-primary-overlay-multiplier);
    background-color: rgb(var(--v-theme-primary));
    color: rgb(var(--v-theme-on-primary));
  }
  .bg-primary-darken-1 {
    --v-theme-overlay-multiplier: var(--v-theme-primary-darken-1-overlay-multiplier);
    background-color: rgb(var(--v-theme-primary-darken-1));
    color: rgb(var(--v-theme-on-primary-darken-1));
  }
  .bg-secondary {
    --v-theme-overlay-multiplier: var(--v-theme-secondary-overlay-multiplier);
    background-color: rgb(var(--v-theme-secondary));
    color: rgb(var(--v-theme-on-secondary));
  }
  .bg-secondary-darken-1 {
    --v-theme-overlay-multiplier: var(--v-theme-secondary-darken-1-overlay-multiplier);
    background-color: rgb(var(--v-theme-secondary-darken-1));
    color: rgb(var(--v-theme-on-secondary-darken-1));
  }
  .bg-error {
    --v-theme-overlay-multiplier: var(--v-theme-error-overlay-multiplier);
    background-color: rgb(var(--v-theme-error));
    color: rgb(var(--v-theme-on-error));
  }
  .bg-info {
    --v-theme-overlay-multiplier: var(--v-theme-info-overlay-multiplier);
    background-color: rgb(var(--v-theme-info));
    color: rgb(var(--v-theme-on-info));
  }
  .bg-success {
    --v-theme-overlay-multiplier: var(--v-theme-success-overlay-multiplier);
    background-color: rgb(var(--v-theme-success));
    color: rgb(var(--v-theme-on-success));
  }
  .bg-warning {
    --v-theme-overlay-multiplier: var(--v-theme-warning-overlay-multiplier);
    background-color: rgb(var(--v-theme-warning));
    color: rgb(var(--v-theme-on-warning));
  }
  .text-background {
    color: rgb(var(--v-theme-background));
  }
  .border-background {
    --v-border-color: var(--v-theme-background);
  }
  .text-surface {
    color: rgb(var(--v-theme-surface));
  }
  .border-surface {
    --v-border-color: var(--v-theme-surface);
  }
  .text-surface-bright {
    color: rgb(var(--v-theme-surface-bright));
  }
  .border-surface-bright {
    --v-border-color: var(--v-theme-surface-bright);
  }
  .text-surface-light {
    color: rgb(var(--v-theme-surface-light));
  }
  .border-surface-light {
    --v-border-color: var(--v-theme-surface-light);
  }
  .text-surface-variant {
    color: rgb(var(--v-theme-surface-variant));
  }
  .border-surface-variant {
    --v-border-color: var(--v-theme-surface-variant);
  }
  .on-surface-variant {
    color: rgb(var(--v-theme-on-surface-variant));
  }
  .text-primary {
    color: rgb(var(--v-theme-primary));
  }
  .border-primary {
    --v-border-color: var(--v-theme-primary);
  }
  .text-primary-darken-1 {
    color: rgb(var(--v-theme-primary-darken-1));
  }
  .border-primary-darken-1 {
    --v-border-color: var(--v-theme-primary-darken-1);
  }
  .text-secondary {
    color: rgb(var(--v-theme-secondary));
  }
  .border-secondary {
    --v-border-color: var(--v-theme-secondary);
  }
  .text-secondary-darken-1 {
    color: rgb(var(--v-theme-secondary-darken-1));
  }
  .border-secondary-darken-1 {
    --v-border-color: var(--v-theme-secondary-darken-1);
  }
  .text-error {
    color: rgb(var(--v-theme-error));
  }
  .border-error {
    --v-border-color: var(--v-theme-error);
  }
  .text-info {
    color: rgb(var(--v-theme-info));
  }
  .border-info {
    --v-border-color: var(--v-theme-info);
  }
  .text-success {
    color: rgb(var(--v-theme-success));
  }
  .border-success {
    --v-border-color: var(--v-theme-success);
  }
  .text-warning {
    color: rgb(var(--v-theme-warning));
  }
  .border-warning {
    --v-border-color: var(--v-theme-warning);
  }
  .on-background {
    color: rgb(var(--v-theme-on-background));
  }
  .on-surface {
    color: rgb(var(--v-theme-on-surface));
  }
  .on-surface-bright {
    color: rgb(var(--v-theme-on-surface-bright));
  }
  .on-surface-light {
    color: rgb(var(--v-theme-on-surface-light));
  }
  .on-primary {
    color: rgb(var(--v-theme-on-primary));
  }
  .on-primary-darken-1 {
    color: rgb(var(--v-theme-on-primary-darken-1));
  }
  .on-secondary {
    color: rgb(var(--v-theme-on-secondary));
  }
  .on-secondary-darken-1 {
    color: rgb(var(--v-theme-on-secondary-darken-1));
  }
  .on-error {
    color: rgb(var(--v-theme-on-error));
  }
  .on-info {
    color: rgb(var(--v-theme-on-info));
  }
  .on-success {
    color: rgb(var(--v-theme-on-success));
  }
  .on-warning {
    color: rgb(var(--v-theme-on-warning));
  }

}
  </style>
</head>
`;

exports[`createTheme > should not generate style element if disabled 1`] = `<head />`;
